Use relative /pay links on landing

--- a/us30.html
+++ b/us30.html
@@ -250,7 +250,7 @@
         <span class="logo">PROFITPRO</span>
         <span class="badge-us30">US30 algo</span>
       </div>
-      <a href="https://profitpro-license.onrender.com/pay" class="btn btn-primary">
+      <a href="/pay" class="btn btn-primary">
         S’abonner
       </a>
     </header>
@@ -270,7 +270,7 @@
           Tu branches le robot sur ton compte et il s’occupe des entrées, sorties et gestion du risque.
         </p>
         <div class="hero-actions">
-          <a href="https://profitpro-license.onrender.com/pay" class="btn btn-primary">
+          <a href="/pay" class="btn btn-primary">
             Commencer maintenant – 19,90 €/mois
           </a>
           <a href="#details" class="btn btn-ghost">
@@ -369,7 +369,7 @@
           <p class="price-note">
             Facturation récurrente, résiliable à tout moment depuis ton espace Stripe.
           </p>
-          <a href="https://profitpro-license.onrender.com/pay" class="btn btn-primary" style="width:100%; text-align:center;">
+          <a href="/pay" class="btn btn-primary" style="width:100%; text-align:center;">
             S’abonner maintenant
           </a>
           <p class="price-note" style="margin-top:10px;">
