--- a/us30.html
+++ b/us30.html
@@ -6,10 +6,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
+    :root {
+      --bg-main: #020617;
+      --bg-card: #020617;
+      --bg-card-soft: #020617;
+      --accent: #2563eb;
+      --accent-soft: rgba(37,99,235,0.12);
+      --accent-strong: rgba(37,99,235,0.4);
+      --text-main: #e5e7eb;
+      --text-muted: #9ca3af;
+      --text-soft: #6b7280;
+      --border-soft: rgba(148,163,184,0.3);
+      --border-strong: rgba(30,64,175,0.8);
+    }
     body {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      color: #0f172a;
-      background: #0b1120;
+      color: var(--text-main);
+      background:
+        radial-gradient(circle at 0% 0%, rgba(37,99,235,0.30), transparent 55%),
+        radial-gradient(circle at 100% 0%, rgba(37,99,235,0.20), transparent 55%),
+        var(--bg-main);
+      min-height: 100vh;
       line-height: 1.6;
     }
     a { text-decoration: none; color: inherit; }
@@ -18,7 +35,6 @@
       max-width: 1100px;
       margin: 0 auto;
       padding: 24px 16px 40px;
-      color: #e5e7eb;
     }
 
     /* Header */
@@ -28,18 +44,30 @@
       align-items: center;
       margin-bottom: 32px;
     }
-    .logo {
+    .brand {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+    .logo-img {
+      height: 28px;      /* adapte si besoin à ton logo */
+      width: auto;
+      display: block;
+      filter: drop-shadow(0 0 10px rgba(37,99,235,0.6));
+    }
+    .logo-text {
       font-weight: 700;
-      letter-spacing: 0.08em;
-      font-size: 18px;
+      letter-spacing: 0.16em;
+      font-size: 14px;
+      text-transform: uppercase;
     }
     .badge-us30 {
-      margin-left: 8px;
       font-size: 11px;
       padding: 2px 8px;
       border-radius: 999px;
-      background: #0f766e;
-      color: #e5e7eb;
+      background: rgba(16,185,129,0.16);
+      color: #a7f3d0;
+      border: 1px solid rgba(16,185,129,0.4);
     }
 
     .btn {
@@ -52,25 +80,27 @@
       font-weight: 600;
       border: 1px solid transparent;
       cursor: pointer;
-      transition: transform 0.08s ease, box-shadow 0.08s ease, background 0.08s ease;
+      transition: transform 0.08s ease, box-shadow 0.08s ease, background 0.08s ease, border-color 0.08s ease;
       white-space: nowrap;
     }
     .btn-primary {
-      background: #2563eb;
+      background: linear-gradient(135deg,#2563eb,#4f46e5);
       color: white;
-      box-shadow: 0 10px 30px rgba(37,99,235,0.4);
+      box-shadow: 0 14px 40px rgba(37,99,235,0.55);
+      border-color: rgba(59,130,246,0.5);
     }
     .btn-primary:hover {
-      background: #1d4ed8;
       transform: translateY(-1px);
-      box-shadow: 0 14px 40px rgba(37,99,235,0.5);
+      box-shadow: 0 18px 55px rgba(37,99,235,0.75);
     }
     .btn-ghost {
-      border-color: #1f2937;
-      background: rgba(15,23,42,0.7);
+      border-color: rgba(148,163,184,0.5);
+      background: rgba(15,23,42,0.9);
+      color: var(--text-main);
     }
     .btn-ghost:hover {
-      background: rgba(31,41,55,0.9);
+      background: rgba(15,23,42,1);
+      border-color: rgba(148,163,184,0.8);
     }
 
     /* Hero */
@@ -89,9 +119,11 @@
       align-items: center;
       padding: 4px 10px;
       border-radius: 999px;
-      border: 1px solid rgba(148,163,184,0.4);
+      border: 1px solid rgba(148,163,184,0.35);
       margin-bottom: 16px;
-      color: #9ca3af;
+      color: var(--text-muted);
+      background: rgba(15,23,42,0.9);
+      backdrop-filter: blur(10px);
     }
     .kpi-pill span {
       height: 6px;
@@ -99,17 +131,19 @@
       border-radius: 999px;
       background: #22c55e;
       margin-right: 6px;
+      box-shadow: 0 0 8px rgba(34,197,94,0.9);
     }
     .hero-title {
-      font-size: clamp(28px, 4vw, 36px);
+      font-size: clamp(28px, 4vw, 38px);
       font-weight: 700;
       margin-bottom: 12px;
       color: #f9fafb;
     }
     .hero-sub {
       font-size: 15px;
-      color: #9ca3af;
+      color: var(--text-muted);
       margin-bottom: 20px;
+      max-width: 36rem;
     }
     .hero-actions {
       display: flex;
@@ -119,36 +153,40 @@
     }
     .hero-note {
       font-size: 12px;
-      color: #6b7280;
+      color: var(--text-soft);
     }
 
     .hero-card {
-      border-radius: 18px;
-      padding: 18px 16px;
-      background: radial-gradient(circle at top left, #1d283a, #020617);
-      border: 1px solid rgba(148,163,184,0.25);
+      border-radius: 22px;
+      padding: 20px 18px;
+      background:
+        radial-gradient(circle at 0% 0%, rgba(37,99,235,0.35), transparent 65%),
+        radial-gradient(circle at 120% 0%, rgba(56,189,248,0.26), transparent 60%),
+        var(--bg-card);
+      border: 1px solid var(--border-soft);
       font-size: 12px;
+      box-shadow: 0 20px 70px rgba(15,23,42,0.9);
     }
     .hero-card-row {
       display: flex;
       justify-content: space-between;
-      margin-bottom: 6px;
-      color: #9ca3af;
+      margin-bottom: 8px;
+      color: var(--text-muted);
     }
     .hero-card-row strong {
-      color: #e5e7eb;
+      color: var(--text-main);
     }
     .hero-tagline {
-      margin-top: 10px;
+      margin-top: 12px;
       font-size: 11px;
-      color: #6b7280;
+      color: var(--text-soft);
     }
 
     /* Sections */
     .section {
       margin-top: 32px;
       padding-top: 24px;
-      border-top: 1px solid rgba(31,41,55,0.8);
+      border-top: 1px solid rgba(31,41,55,0.9);
     }
     .section-title {
       font-size: 18px;
@@ -165,18 +203,14 @@
       .two-cols { grid-template-columns: 1fr; }
     }
 
-    ul.clean {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-    }
+    ul.clean { list-style: none; margin: 0; padding: 0; }
     ul.clean li {
       display: flex;
       align-items: flex-start;
       gap: 8px;
       font-size: 14px;
       margin-bottom: 8px;
-      color: #e5e7eb;
+      color: var(--text-main);
     }
     .dot {
       margin-top: 6px;
@@ -185,15 +219,19 @@
       border-radius: 999px;
       background: #22c55e;
       flex-shrink: 0;
+      box-shadow: 0 0 8px rgba(34,197,94,0.9);
     }
-    .muted { color: #9ca3af; font-size: 13px; }
+    .muted { color: var(--text-muted); font-size: 13px; }
 
     /* Pricing */
     .price-card {
-      border-radius: 18px;
-      border: 1px solid rgba(148,163,184,0.3);
-      background: linear-gradient(145deg, #020617, #020617 40%, #111827);
+      border-radius: 20px;
+      border: 1px solid var(--border-soft);
+      background:
+        linear-gradient(145deg, rgba(15,23,42,1), #020617 45%, #020617 80%),
+        var(--bg-card-soft);
       padding: 20px 18px;
+      box-shadow: 0 18px 60px rgba(15,23,42,0.85);
     }
     .price-amount {
       font-size: 26px;
@@ -203,12 +241,12 @@
     .price-amount span {
       font-size: 14px;
       font-weight: 500;
-      color: #9ca3af;
+      color: var(--text-muted);
       margin-left: 4px;
     }
     .price-note {
       font-size: 12px;
-      color: #9ca3af;
+      color: var(--text-muted);
       margin: 8px 0 16px;
     }
 
@@ -219,38 +257,41 @@
     .faq-q {
       font-size: 14px;
       font-weight: 500;
-      color: #e5e7eb;
+      color: var(--text-main);
       margin-bottom: 3px;
     }
     .faq-a {
       font-size: 13px;
-      color: #9ca3af;
+      color: var(--text-muted);
     }
 
     /* Footer */
     .footer {
       margin-top: 32px;
       padding-top: 16px;
-      border-top: 1px solid rgba(31,41,55,0.8);
+      border-top: 1px solid rgba(31,41,55,0.9);
       font-size: 12px;
-      color: #6b7280;
+      color: var(--text-soft);
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
       gap: 8px;
     }
-    .footer a { color: #9ca3af; }
+    .footer a { color: var(--text-muted); }
   </style>
 </head>
 <body>
   <div class="page">
     <!-- Header -->
     <header class="header">
-      <div>
-        <span class="logo">PROFITPRO</span>
-        <span class="badge-us30">US30 algo</span>
+      <div class="brand">
+        <img src="/static/logo.jpeg" alt="PROFITPRO" class="logo-img">
+        <div>
+          <div class="logo-text">PROFITPRO</div>
+          <div class="badge-us30">US30 algo</div>
+        </div>
       </div>
-      <a href="/pay" class="btn btn-primary">
+      <a href="https://profitpro-license.onrender.com/pay" class="btn btn-primary">
         S’abonner
       </a>
     </header>
@@ -270,7 +311,7 @@
           Tu branches le robot sur ton compte et il s’occupe des entrées, sorties et gestion du risque.
         </p>
         <div class="hero-actions">
-          <a href="/pay" class="btn btn-primary">
+          <a href="https://profitpro-license.onrender.com/pay" class="btn btn-primary">
             Commencer maintenant – 19,90 €/mois
           </a>
           <a href="#details" class="btn btn-ghost">
@@ -369,7 +410,7 @@
           <p class="price-note">
             Facturation récurrente, résiliable à tout moment depuis ton espace Stripe.
           </p>
-          <a href="/pay" class="btn btn-primary" style="width:100%; text-align:center;">
+          <a href="https://profitpro-license.onrender.com/pay" class="btn btn-primary" style="width:100%; text-align:center;">
             S’abonner maintenant
           </a>
           <p class="price-note" style="margin-top:10px;">
